# Fenrir-Math-Library

./: CMakeLists.txt  README
include/: FenrirMath.h  FenrirMath.hpp  Vector2Df.h  Vector3Df.h  type_mat2.h  type_mat2.hpp  type_mat2.inc  type_mat3.h  type_mat3.hpp  type_mat3.inc  type_mat4.hpp  type_mat4.inc  type_vec2.h  type_vec2.hpp  type_vec2.inc  type_vec3.h  type_vec3.hpp  type_vec3.inc  type_vec4.h  type_vec4.inc  vec2.h  vec3.h  vec4.h
source/: CMakeLists.txt  Vector2Df.cpp  Vector3Df.cpp  type_vec2.cpp  type_vec3.cpp  type_vec4.cpp  vec2.cpp  vec3.cpp  vec4.cpp
test/: CMakeLists.txt  test.cpp
